--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -311,7 +311,7 @@
     text-decoration: underline;
     text-decoration-color: transparent;
     transition: $t-fast;
-    word-break:    break-all;
+    word-break:    break-word;
     overflow-wrap: anywhere;  
     &:hover { text-decoration-color: var(--accent-text); }
   }
@@ -683,7 +683,7 @@
 
     a {
       color:      var(--accent-text);
-      word-break: break-all;
+      word-break: break-word;
     }
   }
 
